@@ -14,6 +14,9 @@ Change log for zeit.web
 
 - ZON-2073: Redirect on trailing slash.
 
+- ZON-2145: Use new fallback_size setting to restrict image sizes for noscript,
+  so we don't have to restrict the largest available variant via max_size.
+
 
 1.63.3 (2015-09-04)
 -------------------
